@@ -1,5 +1,6 @@
 package stexfires.record.mapper;
 
+import org.jspecify.annotations.Nullable;
 import stexfires.record.TextField;
 import stexfires.record.TextFields;
 import stexfires.record.TextRecord;
@@ -17,7 +18,6 @@ import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.UnaryOperator;
-import java.util.stream.Collectors;
 
 /**
  * @see AddTextMapper
@@ -27,7 +27,7 @@ import java.util.stream.Collectors;
  */
 public class TextsMapper<T extends TextRecord> extends FunctionMapper<T> {
 
-    public TextsMapper(Function<? super T, Collection<String>> textsFunction) {
+    public TextsMapper(Function<? super T, Collection<@Nullable String>> textsFunction) {
         super(TextRecord::category, TextRecord::recordId, textsFunction);
     }
 
@@ -35,12 +35,12 @@ public class TextsMapper<T extends TextRecord> extends FunctionMapper<T> {
         return new TextsMapper<>(TextFields::collectTexts);
     }
 
-    public static <T extends TextRecord> TextsMapper<T> recordFieldFunction(BiFunction<TextRecord, TextField, String> recordFieldFunction) {
+    public static <T extends TextRecord> TextsMapper<T> recordFieldFunction(BiFunction<TextRecord, TextField, @Nullable String> recordFieldFunction) {
         Objects.requireNonNull(recordFieldFunction);
         return new TextsMapper<>(record ->
                 record.streamOfFields()
                       .map(field -> recordFieldFunction.apply(record, field))
-                      .collect(Collectors.toList()));
+                      .toList());
     }
 
     /**
@@ -51,7 +51,7 @@ public class TextsMapper<T extends TextRecord> extends FunctionMapper<T> {
         return new TextsMapper<>(record ->
                 record.streamOfFields()
                       .map(fieldTextMapper::mapToText)
-                      .collect(Collectors.toList()));
+                      .toList());
     }
 
     public static <T extends TextRecord> TextsMapper<T> mapOneField(Function<? super T, TextField> fieldFunction,
@@ -59,17 +59,17 @@ public class TextsMapper<T extends TextRecord> extends FunctionMapper<T> {
         Objects.requireNonNull(fieldFunction);
         Objects.requireNonNull(fieldTextMapper);
         return new TextsMapper<>(record ->
-                Strings.list(fieldTextMapper.mapToText(fieldFunction.apply(record))));
+                Strings.listOfNullable(fieldTextMapper.mapToText(Objects.requireNonNull(fieldFunction.apply(record)))));
     }
 
     public static <T extends TextRecord> TextsMapper<T> mapOneField(int index,
                                                                     FieldTextMapper fieldTextMapper) {
         Objects.requireNonNull(fieldTextMapper);
         return new TextsMapper<>(record -> record.isValidIndex(index) ?
-                Strings.list(fieldTextMapper.mapToText(Objects.requireNonNull(record.fieldAt(index)))) : Strings.list());
+                Strings.listOfNullable(fieldTextMapper.mapToText(Objects.requireNonNull(record.fieldAt(index)))) : Collections.emptyList());
     }
 
-    public static <T extends TextRecord> TextsMapper<T> size(int size, String fillingText) {
+    public static <T extends TextRecord> TextsMapper<T> size(int size, @Nullable String fillingText) {
         if (size < 0) {
             throw new IllegalArgumentException("Illegal size! size=" + size);
         }
@@ -79,9 +79,9 @@ public class TextsMapper<T extends TextRecord> extends FunctionMapper<T> {
                         record.streamOfFields()
                               .map(TextField::text)
                               .limit(size)
-                              .collect(Collectors.toList());
+                              .toList();
             } else if (size > record.size()) {
-                List<String> newTexts = new ArrayList<>(size);
+                List<@Nullable String> newTexts = new ArrayList<>(size);
                 for (int index = 0; index < size; index++) {
                     if (record.isValidIndex(index)) {
                         newTexts.add(record.textAt(index));
@@ -96,11 +96,14 @@ public class TextsMapper<T extends TextRecord> extends FunctionMapper<T> {
     }
 
     public static <T extends TextRecord> TextsMapper<T> reverseTexts() {
-        return new TextsMapper<>(record -> {
-            List<String> newTexts = TextFields.collectTexts(record);
-            Collections.reverse(newTexts);
-            return newTexts;
-        });
+        return new TextsMapper<>(record ->
+                record.listOfFieldsReversed().stream().map(TextField::text).toList());
+    }
+
+    public static <T extends TextRecord> TextsMapper<T> createMessage(RecordMessage<? super T> recordMessage) {
+        Objects.requireNonNull(recordMessage);
+        return new TextsMapper<>(record ->
+                Strings.listOfNullable(recordMessage.createMessage(record)));
     }
 
     @SuppressWarnings("OverloadedVarargsMethod")
@@ -109,55 +112,57 @@ public class TextsMapper<T extends TextRecord> extends FunctionMapper<T> {
         Objects.requireNonNull(recordMessages);
         return new TextsMapper<>(r -> Arrays.stream(recordMessages)
                                             .map(recordMessage -> recordMessage.createMessage(r))
-                                            .collect(Collectors.toList()));
+                                            .toList());
     }
 
     public static <T extends TextRecord> TextsMapper<T> createMessages(Collection<RecordMessage<? super T>> recordMessages) {
         Objects.requireNonNull(recordMessages);
         return new TextsMapper<>(r -> recordMessages.stream()
                                                     .map(recordMessage -> recordMessage.createMessage(r))
-                                                    .collect(Collectors.toList()));
+                                                    .toList());
     }
 
     @SuppressWarnings("OverloadedVarargsMethod")
     @SafeVarargs
-    public static <T extends TextRecord> TextsMapper<T> applyTextOperators(UnaryOperator<String>... unaryOperators) {
+    public static <T extends TextRecord> TextsMapper<T> applyTextOperators(UnaryOperator<@Nullable String>... unaryOperators) {
+        Objects.requireNonNull(unaryOperators);
         return new TextsMapper<>(record ->
                 record.streamOfFields()
                       .map(field -> unaryOperators.length > field.index()
                               ? unaryOperators[field.index()].apply(field.text())
                               : field.text())
-                      .collect(Collectors.toList()));
+                      .toList());
     }
 
-    public static <T extends TextRecord> TextsMapper<T> applyTextOperators(List<UnaryOperator<String>> unaryOperators) {
+    public static <T extends TextRecord> TextsMapper<T> applyTextOperators(List<UnaryOperator<@Nullable String>> unaryOperators) {
+        Objects.requireNonNull(unaryOperators);
         return new TextsMapper<>(record ->
                 record.streamOfFields()
                       .map(field -> unaryOperators.size() > field.index()
                               ? unaryOperators.get(field.index()).apply(field.text())
                               : field.text())
-                      .collect(Collectors.toList()));
+                      .toList());
     }
 
     @SuppressWarnings("OverloadedVarargsMethod")
     @SafeVarargs
-    public static <T extends TextRecord> TextsMapper<T> applyRecordFunctions(Function<? super T, String>... textFunctions) {
+    public static <T extends TextRecord> TextsMapper<T> applyRecordFunctions(Function<? super T, @Nullable String>... textFunctions) {
         Objects.requireNonNull(textFunctions);
         return new TextsMapper<>(r -> Arrays.stream(textFunctions)
                                             .map(stringFunction -> stringFunction.apply(r))
-                                            .collect(Collectors.toList()));
+                                            .toList());
     }
 
-    public static <T extends TextRecord> TextsMapper<T> applyRecordFunctions(Collection<Function<? super T, String>> textFunctions) {
+    public static <T extends TextRecord> TextsMapper<T> applyRecordFunctions(Collection<Function<? super T, @Nullable String>> textFunctions) {
         Objects.requireNonNull(textFunctions);
         return new TextsMapper<>(r -> textFunctions.stream()
                                                    .map(stringFunction -> stringFunction.apply(r))
-                                                   .collect(Collectors.toList()));
+                                                   .toList());
     }
 
-    public static <T extends TextRecord> TextsMapper<T> add(Function<? super T, String> textFunction) {
+    public static <T extends TextRecord> TextsMapper<T> add(Function<? super T, @Nullable String> textFunction) {
         return new TextsMapper<>(record -> {
-            List<String> newTexts = new ArrayList<>(record.size() + 1);
+            List<@Nullable String> newTexts = new ArrayList<>(record.size() + 1);
             newTexts.addAll(TextFields.collectTexts(record));
             newTexts.add(textFunction.apply(record));
             return newTexts;
@@ -169,7 +174,7 @@ public class TextsMapper<T extends TextRecord> extends FunctionMapper<T> {
                 record.streamOfFields()
                       .filter(field -> field.index() != index)
                       .map(TextField::text)
-                      .collect(Collectors.toList()));
+                      .toList());
     }
 
     public static <T extends TextRecord> TextsMapper<T> remove(Predicate<TextField> fieldPredicate) {
@@ -178,7 +183,7 @@ public class TextsMapper<T extends TextRecord> extends FunctionMapper<T> {
                 record.streamOfFields()
                       .filter(fieldPredicate.negate())
                       .map(TextField::text)
-                      .collect(Collectors.toList()));
+                      .toList());
     }
 
 }
