@@ -1,12 +1,12 @@
 package stexfires.record.modifier;
 
+import org.jspecify.annotations.Nullable;
 import stexfires.record.TextRecord;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -15,21 +15,23 @@ import java.util.stream.Stream;
 public class PivotModifier<T extends TextRecord> extends GroupModifier<T, TextRecord> {
 
     public PivotModifier(Function<? super T, ?> groupByFunction,
-                         Function<? super T, String> newCategoryFunction,
-                         Function<List<T>, List<String>> pivotTextsFunction) {
+                         Function<? super T, @Nullable String> newCategoryFunction,
+                         Function<List<T>, List<@Nullable String>> pivotTextsFunction) {
         super(groupByFunction,
                 GroupModifier.aggregateToTexts(
                         list -> newCategoryFunction.apply(list.getFirst()),
                         pivotTextsFunction));
+        Objects.requireNonNull(groupByFunction);
         Objects.requireNonNull(newCategoryFunction);
+        Objects.requireNonNull(pivotTextsFunction);
     }
 
     public PivotModifier(Function<? super T, ?> groupByFunction,
-                         Function<? super T, String> newCategoryFunction,
+                         Function<? super T, @Nullable String> newCategoryFunction,
                          Function<? super T, Stream<String>> newFirstTextsFunction,
-                         Function<? super T, String> textFunction,
+                         Function<? super T, @Nullable String> textFunction,
                          String nullText,
-                         Function<? super T, String> textClassificationFunction,
+                         Function<? super T, @Nullable String> textClassificationFunction,
                          List<String> textClassifications) {
         this(groupByFunction,
                 newCategoryFunction,
@@ -39,10 +41,17 @@ public class PivotModifier<T extends TextRecord> extends GroupModifier<T, TextRe
                         nullText,
                         textClassificationFunction,
                         textClassifications));
+        Objects.requireNonNull(groupByFunction);
+        Objects.requireNonNull(newCategoryFunction);
+        Objects.requireNonNull(newFirstTextsFunction);
+        Objects.requireNonNull(textFunction);
+        Objects.requireNonNull(nullText);
+        Objects.requireNonNull(textClassificationFunction);
+        Objects.requireNonNull(textClassifications);
     }
 
     public PivotModifier(Function<? super T, ?> groupByFunction,
-                         Function<? super T, String> newCategoryFunction,
+                         Function<? super T, @Nullable String> newCategoryFunction,
                          Function<? super T, Stream<String>> newFirstTextsFunction,
                          int newRecordSize,
                          String nullText,
@@ -54,10 +63,12 @@ public class PivotModifier<T extends TextRecord> extends GroupModifier<T, TextRe
                         newRecordSize,
                         nullText,
                         textIndexes));
+        Objects.requireNonNull(groupByFunction);
+        Objects.requireNonNull(newCategoryFunction);
+        Objects.requireNonNull(newFirstTextsFunction);
     }
 
-    @SuppressWarnings("ReturnOfNull")
-    public static <T extends TextRecord> Function<? super T, String> withoutCategory() {
+    public static <T extends TextRecord> Function<? super T, @Nullable String> withoutCategory() {
         return r -> null;
     }
 
@@ -66,6 +77,8 @@ public class PivotModifier<T extends TextRecord> extends GroupModifier<T, TextRe
                                                                                    String nullText,
                                                                                    int textClassificationIndex,
                                                                                    List<String> textClassifications) {
+        Objects.requireNonNull(nullText);
+        Objects.requireNonNull(textClassifications);
         return new PivotModifier<>(
                 GroupModifier.<T>groupByTextAt(keyIndex),
                 withoutCategory(),
@@ -79,8 +92,13 @@ public class PivotModifier<T extends TextRecord> extends GroupModifier<T, TextRe
     public static <T extends TextRecord> PivotModifier<T> pivotWithClassifications(Function<? super T, String> keyFunction,
                                                                                    Function<? super T, String> textFunction,
                                                                                    String nullText,
-                                                                                   Function<? super T, String> textClassificationFunction,
+                                                                                   Function<? super T, @Nullable String> textClassificationFunction,
                                                                                    List<String> textClassifications) {
+        Objects.requireNonNull(keyFunction);
+        Objects.requireNonNull(textFunction);
+        Objects.requireNonNull(nullText);
+        Objects.requireNonNull(textClassificationFunction);
+        Objects.requireNonNull(textClassifications);
         return new PivotModifier<>(keyFunction,
                 withoutCategory(),
                 r -> Stream.of(keyFunction.apply(r)),
@@ -93,15 +111,19 @@ public class PivotModifier<T extends TextRecord> extends GroupModifier<T, TextRe
     public static <T extends TextRecord> PivotModifier<T> pivotWithIndexes(int keyIndex,
                                                                            int recordsPerKey,
                                                                            String nullText,
-                                                                           Integer... textIndexes) {
+                                                                           int... textIndexes) {
+        Objects.requireNonNull(nullText);
+        Objects.requireNonNull(textIndexes);
         return pivotWithIndexes(keyIndex, recordsPerKey, nullText,
-                Arrays.asList(textIndexes));
+                Arrays.stream(textIndexes).boxed().toList());
     }
 
     public static <T extends TextRecord> PivotModifier<T> pivotWithIndexes(int keyIndex,
                                                                            int recordsPerKey,
                                                                            String nullText,
                                                                            List<Integer> textIndexes) {
+        Objects.requireNonNull(nullText);
+        Objects.requireNonNull(textIndexes);
         return new PivotModifier<>(
                 GroupModifier.<T>groupByTextAt(keyIndex),
                 withoutCategory(),
@@ -111,14 +133,15 @@ public class PivotModifier<T extends TextRecord> extends GroupModifier<T, TextRe
                 textIndexes);
     }
 
-    public static <T extends TextRecord> Function<List<T>, List<String>> pivotTextsFunctionWithClassifications(
+    public static <T extends TextRecord> Function<List<T>, List<@Nullable String>> pivotTextsFunctionWithClassifications(
             Function<? super T, Stream<String>> newFirstTextsFunction,
-            Function<? super T, String> textFunction,
+            Function<? super T, @Nullable String> textFunction,
             String nullText,
-            Function<? super T, String> textClassificationFunction,
+            Function<? super T, @Nullable String> textClassificationFunction,
             List<String> textClassifications) {
         Objects.requireNonNull(newFirstTextsFunction);
         Objects.requireNonNull(textFunction);
+        Objects.requireNonNull(nullText);
         Objects.requireNonNull(textClassificationFunction);
         Objects.requireNonNull(textClassifications);
         Function<List<T>, Stream<String>> newTextsFunction = list ->
@@ -134,15 +157,17 @@ public class PivotModifier<T extends TextRecord> extends GroupModifier<T, TextRe
                 Stream.concat(
                               newFirstTextsFunction.apply(list.getFirst()),
                               newTextsFunction.apply(list))
-                      .collect(Collectors.toList());
+                      .toList();
     }
 
-    public static <T extends TextRecord> Function<List<T>, List<String>> pivotTextsFunctionWithIndexes(
+    public static <T extends TextRecord> Function<List<T>, List<@Nullable String>> pivotTextsFunctionWithIndexes(
             Function<? super T, Stream<String>> newFirstTextsFunction,
             int newRecordSize,
             String nullText,
             List<Integer> textIndexes) {
         Objects.requireNonNull(newFirstTextsFunction);
+        Objects.requireNonNull(nullText);
+        Objects.requireNonNull(textIndexes);
         if (newRecordSize < 0) {
             throw new IllegalArgumentException("newRecordSize=" + newRecordSize);
         }
@@ -157,7 +182,7 @@ public class PivotModifier<T extends TextRecord> extends GroupModifier<T, TextRe
                                       newTextsFunction.apply(list)),
                               Stream.generate(() -> nullText))
                       .limit(newRecordSize)
-                      .collect(Collectors.toList());
+                      .toList();
     }
 
 }
