@@ -1,6 +1,6 @@
 package stexfires.record.modifier;
 
-import org.jetbrains.annotations.NotNull;
+import org.jspecify.annotations.Nullable;
 import stexfires.record.TextRecord;
 import stexfires.record.impl.ManyFieldsRecord;
 import stexfires.util.Strings;
@@ -12,7 +12,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.function.Function;
 import java.util.function.IntFunction;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -45,7 +44,7 @@ public class UnpivotModifier<T extends TextRecord, R extends TextRecord> impleme
                             .filter(valueIndex -> !onlyExistingValues || record.isValidIndex(valueIndex))
                             .map(valueIndex ->
                                     new ManyFieldsRecord(record.category(), record.recordId(),
-                                            Strings.concat(
+                                            Strings.concatManyStreams(
                                                     // keys
                                                     keyIndexes.stream().map(record::textAt),
                                                     // identifier
@@ -65,7 +64,7 @@ public class UnpivotModifier<T extends TextRecord, R extends TextRecord> impleme
                 Collections.singleton(keyIndex),
                 valueIndexToIdentifier,
                 onlyExistingValues,
-                Arrays.stream(valueIndexes).boxed().collect(Collectors.toList())
+                Arrays.stream(valueIndexes).boxed().toList()
         );
     }
 
@@ -81,11 +80,10 @@ public class UnpivotModifier<T extends TextRecord, R extends TextRecord> impleme
         );
     }
 
-    @SuppressWarnings("ReturnOfNull")
     @SafeVarargs
     public static <T extends TextRecord> UnpivotModifier<T, TextRecord> oneRecordPerValues(Collection<Integer> keyIndexes,
                                                                                            IntFunction<String> recordIndexToIdentifier,
-                                                                                           Collection<Integer>... valueIndexes) {
+                                                                                           Collection<@Nullable Integer>... valueIndexes) {
         Objects.requireNonNull(keyIndexes);
         Objects.requireNonNull(recordIndexToIdentifier);
         Objects.requireNonNull(valueIndexes);
@@ -93,7 +91,7 @@ public class UnpivotModifier<T extends TextRecord, R extends TextRecord> impleme
                 IntStream.range(0, valueIndexes.length)
                          .mapToObj(recordIndex ->
                                  new ManyFieldsRecord(record.category(), record.recordId(),
-                                         Strings.concat(
+                                         Strings.concatManyStreams(
                                                  // keys
                                                  keyIndexes.stream().map(record::textAt),
                                                  // identifier
@@ -104,7 +102,7 @@ public class UnpivotModifier<T extends TextRecord, R extends TextRecord> impleme
     }
 
     @Override
-    public final @NotNull Stream<R> modify(Stream<T> recordStream) {
+    public final Stream<R> modify(Stream<T> recordStream) {
         return recordStream.flatMap(unpivotFunction);
     }
 
